--- a/Desafios/D011/estilo/style.css
+++ b/Desafios/D011/estilo/style.css
@@ -61,9 +61,12 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--font3);
-    font-size: 3.5vw;
+    font-size: 2.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
 
 section.normal {
     background-color: white;
@@ -73,11 +76,26 @@ section.normal {
 section.imagem {
     background-color: rgb(37, 35, 35);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.486);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(0,0,0,0.253);
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.555);
+    text-shadow: 1px 2px 0px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer {
